syntax = "proto3";

package kafka.metadata.collector.proto;

option java_package = "no.sysco.middleware.kafka.metadata.collector.proto";
option java_multiple_files = true;

message TopicEventPb {
    string name = 1;
    oneof event {
        TopicCreatedPb topicCreated = 2;
        TopicUpdatedPb topicUpdated = 3;
        TopicDeletedPb topicDeleted = 4;
    }
}

message TopicCreatedPb {
}

message TopicUpdatedPb {
    TopicDescriptionPb topicDescription = 1;
}

message TopicDescriptionPb {
    message TopicPartitionInfoPb {
        int32 partition = 1;
        repeated NodePb replicas = 2;
    }

    bool internal = 1;
    repeated TopicPartitionInfoPb topicPartitions = 2;
}


message NodePb {
    int32 id = 1;
    string host = 2;
    int32 port = 3;
    string rack = 4;
}

message TopicDeletedPb {
}